force-app/main/default/objects/FundingBaseline__c/FundingBaseline__c.object-meta.xml
<CustomObject>
    <description>Object to store initial and revised KPIs for specific time periods for Funding Awards</description>
    <label>Baseline</label>
    <nameField>
        <displayFormat>BAS-{0000}</displayFormat>
        <label>Funding Baseline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baselines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>