force-app/main/default/objects/FundingBaseline__c/fields/AA_Upfront_15__c.field-meta.xml
<CustomField>
    <fullName>AA_Upfront_15__c</fullName>
    <description>15% of the Baseline Total Grant Funding</description>
    <formula>( Baseline_Total_Grant_Spend__c  / 100) * 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>15% of the Baseline Total Grant Funding</inlineHelpText>
    <label>A&amp;A Upfront (15%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>