force-app/main/default/objects/FundingBaseline__c/fields/ABS_FY_Grant_Spend_Rollup__c.field-meta.xml
<CustomField>
    <fullName>ABS_FY_Grant_Spend_Rollup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ABS FY Grant Spend Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>