force-app/main/default/objects/FundingBaseline__c/fields/Actual_average_for_the_phase__c.field-meta.xml
<CustomField>
    <fullName>Actual_average_for_the_phase__c</fullName>
    <formula>Baseline_Grant_Capital_Spend__c - ( No_of_Homes_for_On_Gas_grid_LCH_Offer__c * 20000) / ( Total_Homes_to_be_Upgraded__c - No_of_Homes_for_On_Gas_grid_LCH_Offer__c)</formula>
    <label>Actual average for the phase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>