force-app/main/default/objects/FundingBaseline__c/fields/Actual_Average_Vs_Cost_Cap_Average__c.field-meta.xml
<CustomField>
    <fullName>Actual_Average_Vs_Cost_Cap_Average__c</fullName>
    <formula>Actual_average_for_the_phase__c /  Average_Cost_Cap__c</formula>
    <label>% Actual Average Vs Cost Cap Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>