force-app/main/default/objects/FundingBaseline__c/fields/Approved_Batch_Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Approved_Batch_Total_Spend__c</fullName>
    <label>Approved Batch Total Spend</label>
    <summarizedField>FundingBatch__c.Total_Grant_Fund_Requested__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatch__c.ABS_Status__c</field>
        <operation>equals</operation>
        <value>Approved, Closed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FundingBatch__c.Version_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatch__c.Active_Baseline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>