force-app/main/default/objects/FundingBaseline__c/fields/Average_Cost_Cap__c.field-meta.xml
<CustomField>
    <fullName>Average_Cost_Cap__c</fullName>
    <formula>(Total_Homes_to_be_Upgraded__c -  No_of_Homes_for_On_Gas_grid_LCH_Offer__c) * 7500 + ( No_of_Homes_for_Off_Gas_grid_LCH_Uplift__c * 7500) /  (Total_Homes_to_be_Upgraded__c - No_of_Homes_for_On_Gas_grid_LCH_Offer__c)</formula>
    <label>Cost cap average for the phase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>