force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Autonumber__c</fullName>
    <description>unique Number to identify Baseline</description>
    <displayFormat>BAS-{00000}</displayFormat>
    <label>Baseline Autonumber</label>
    <type>AutoNumber</type>
</CustomField>