force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Co_funding_A_A_spend__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Co_funding_A_A_spend__c</fullName>
    <label>Baseline Co-funding A&amp;A spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>