force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Co_Funding_Capital_Spend__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Co_Funding_Capital_Spend__c</fullName>
    <label>Baseline Co-Funding Capital Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>