force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Combined_Capital_Spend__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Combined_Capital_Spend__c</fullName>
    <formula>Baseline_Grant_Capital_Spend__c +  Baseline_Co_Funding_Capital_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Combined Capital Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>