force-app/main/default/objects/FundingBaseline__c/fields/Baseline_End_Date_Original__c.field-meta.xml
<CustomField>
    <fullName>Baseline_End_Date_Original__c</fullName>
    <inlineHelpText>The original End date of the baseline as specified in the GRs application</inlineHelpText>
    <label>Baseline End Date Original</label>
    <type>Date</type>
</CustomField>