force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Grant_A_A_Spend__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Grant_A_A_Spend__c</fullName>
    <label>Baseline Grant A&amp;A Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>