force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Start_Date_Original__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Start_Date_Original__c</fullName>
    <inlineHelpText>The original start date of the baseline as specified in the GRs application</inlineHelpText>
    <label>Baseline Start Date Original</label>
    <type>Date</type>
</CustomField>