force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Total_Co_Funding_Spend__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Total_Co_Funding_Spend__c</fullName>
    <formula>Baseline_Co_Funding_Capital_Spend__c + Baseline_Co_funding_A_A_spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Total Co-Funding Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>