force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Total_Grant_Spend__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Total_Grant_Spend__c</fullName>
    <formula>Baseline_Grant_Capital_Spend__c +  Baseline_Grant_A_A_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Total Grant Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>