force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Total_Spend__c</fullName>
    <formula>Baseline_Total_Grant_Spend__c +  Baseline_Total_Co_Funding_Spend__c +  SP_Baseline_Grant_Spend__c +  SP_Baseline_Co_Funding_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Total Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>