force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Type__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Type__c</fullName>
    <label>Baseline Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Award</fullName>
            </value>
            <value>
                <fullName>Phase</fullName>
            </value>
            <value>
                <fullName>Financial Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>