force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Version__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Version__c</fullName>
    <formula>IF( Parent_Time_Period__r.Record_Type_Name__c = &quot;Award Duration&quot;,Funding_Award__r.Funding_Award_Acronym__c + &quot;-&quot;, Parent_Time_Period__r.Name +&quot;-&quot;) 

+

IF(ISPICKVAL(Baseline_Type__c, &quot;Award&quot;) , &quot;Award Baseline V&quot;+TEXT(Baseline_Version_No__c), &quot;Baseline V&quot;+TEXT(Baseline_Version_No__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Version</label>
    <type>Text</type>
</CustomField>