force-app/main/default/objects/FundingBaseline__c/fields/Baseline_Version_No__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Version_No__c</fullName>
    <label>Baseline Version No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>