force-app/main/default/objects/FundingBaseline__c/fields/Capital_Batch_Payments_85__c.field-meta.xml
<CustomField>
    <fullName>Capital_Batch_Payments_85__c</fullName>
    <description>85% of Baseline Total Grant Funding</description>
    <formula>(Baseline_Total_Grant_Spend__c / 100) * 85</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>85% of Baseline Total Grant Funding</inlineHelpText>
    <label>Capital Batch Payments (85%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>