force-app/main/default/objects/FundingBaseline__c/fields/Capital_Upfront_5__c.field-meta.xml
<CustomField>
    <fullName>Capital_Upfront_5__c</fullName>
    <description>5% of Baseline Total Grant Funding</description>
    <formula>( Baseline_Total_Grant_Spend__c  / 100) * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>5% of Baseline Total Grant Funding</inlineHelpText>
    <label>Capital Upfront (5%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>