force-app/main/default/objects/FundingBaseline__c/fields/CF_Capital_Remaining_Formula__c.field-meta.xml
<CustomField>
    <fullName>CF_Capital_Remaining_Formula__c</fullName>
    <formula>Baseline_Grant_Capital_Spend__c - Challenge_Fund_Capital_Drawn_Down__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CF Capital Remaining Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>