force-app/main/default/objects/FundingBaseline__c/fields/Challenge_Fund_Capital_Drawn_Down__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Fund_Capital_Drawn_Down__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Updated via flow when a drawdown request for this phase has been approved. Is a summary of all capital drawdown requests.</description>
    <label>Challenge Fund Capital Drawn Down</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>