force-app/main/default/objects/FundingBaseline__c/fields/Challenge_Fund_Capital_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Fund_Capital_Remaining__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Shows the Baseline Grant Capital Spend - the amount already drawn down for this Phase.</description>
    <label>Challenge Fund Capital Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>