force-app/main/default/objects/FundingBaseline__c/fields/Co_Funding_Spend_24_25__c.field-meta.xml
<CustomField>
    <fullName>Co_Funding_Spend_24_25__c</fullName>
    <label>Co-Funding Spend 24/25</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>