force-app/main/default/objects/FundingBaseline__c/fields/DAC_Successful__c.field-meta.xml
<CustomField>
    <fullName>DAC_Successful__c</fullName>
    <label>DAC Successful (MS)</label>
    <type>Date</type>
</CustomField>