force-app/main/default/objects/FundingBaseline__c/fields/Date_of_Project_Commencing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Project_Commencing__c</fullName>
    <label>Date of Project Commencing</label>
    <type>Date</type>
</CustomField>