force-app/main/default/objects/FundingBaseline__c/fields/Date_of_Project_Completing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Project_Completing__c</fullName>
    <label>Date of Project Completing</label>
    <type>Date</type>
</CustomField>