force-app/main/default/objects/FundingBaseline__c/fields/Date_of_Time_Period_Commencing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Time_Period_Commencing__c</fullName>
    <formula>Parent_Time_Period__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Time Period Commencing</label>
    <type>Date</type>
</CustomField>