force-app/main/default/objects/FundingBaseline__c/fields/Electric_Off_Gas_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Electric_Off_Gas_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Electric Off-Gas Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>