force-app/main/default/objects/FundingBaseline__c/fields/Energy_Savings_24_25__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings_24_25__c</fullName>
    <label>Energy Savings 24/25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>