force-app/main/default/objects/FundingBaseline__c/fields/Energy_Savings_25_26__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings_25_26__c</fullName>
    <label>Energy Savings 25/26</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>