force-app/main/default/objects/FundingBaseline__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <formula>&quot;FY&quot; +  TEXT(Parent_Time_Period__r.Time_Period_Sequence_Number__c)</formula>
    <label>Financial Year</label>
    <type>Text</type>
</CustomField>