force-app/main/default/objects/FundingBaseline__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Detail Relationship to parent Award</description>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Baselines</relationshipLabel>
    <relationshipName>Funding_Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>