force-app/main/default/objects/FundingBaseline__c/fields/Grant_Spend_26_27__c.field-meta.xml
<CustomField>
    <fullName>Grant_Spend_26_27__c</fullName>
    <label>Grant Spend 26/27</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>