force-app/main/default/objects/FundingBaseline__c/fields/Grant_Spend_27_28__c.field-meta.xml
<CustomField>
    <fullName>Grant_Spend_27_28__c</fullName>
    <label>Grant Spend 27/28</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>