force-app/main/default/objects/FundingBaseline__c/fields/Homes_Approved__c.field-meta.xml
<CustomField>
    <fullName>Homes_Approved__c</fullName>
    <label>Homes Approved</label>
    <summarizedField>FundingBatch__c.Total_Homes__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatch__c.ABS_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FundingBatch__c.Version_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatch__c.Active_Baseline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>