force-app/main/default/objects/FundingBaseline__c/fields/Homes_Completed__c.field-meta.xml
<CustomField>
    <fullName>Homes_Completed__c</fullName>
    <label>Homes Completed</label>
    <summarizedField>FundingBatch__c.Total_Homes__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatch__c.ABS_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatch__c.Active_Baseline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>