force-app/main/default/objects/FundingBaseline__c/fields/Homes_Ending_at_EPC_D_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Homes_Ending_at_EPC_D_Percentage__c</fullName>
    <formula>No_of_homes_ending_at_EPC_D__c  / Total_Homes_to_be_Upgraded__c</formula>
    <label>Homes Ending at EPC D %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>