force-app/main/default/objects/FundingBaseline__c/fields/Homes_in_Draft__c.field-meta.xml
<CustomField>
    <fullName>Homes_in_Draft__c</fullName>
    <label>Homes in Draft</label>
    <summarizedField>FundingBatch__c.Total_Homes__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatch__c.ABS_Status__c</field>
        <operation>equals</operation>
        <value>Draft, Review, Withdrawn, Returned by PSO, Returned by GRL</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FundingBatch__c.Previous_Version_Id_Text__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatch__c.Active_Baseline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>