force-app/main/default/objects/FundingBaseline__c/fields/Homes_Starting_at_EPC_C_A_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Homes_Starting_at_EPC_C_A_Percentage__c</fullName>
    <formula>(No_of_homes_starting_at_A__c + No_of_homes_starting_at_EPC_B__c + No_of_homes_starting_at_EPC_C__c) /  Total_Homes_to_be_Upgraded__c</formula>
    <label>Homes Starting at EPC C-A %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>