force-app/main/default/objects/FundingBaseline__c/fields/Homes_To_Be_Upgraded_Original__c.field-meta.xml
<CustomField>
    <fullName>Homes_To_Be_Upgraded_Original__c</fullName>
    <inlineHelpText>The original Homes to be upgraded of the baseline as specified in the GRs application</inlineHelpText>
    <label>Homes To Be Upgraded Original</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>