force-app/main/default/objects/FundingBaseline__c/fields/Justification_for_EPC_C_non_social_homes__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_EPC_C_non_social_homes__c</fullName>
    <label>Justification for EPC C/non-social homes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>