force-app/main/default/objects/FundingBaseline__c/fields/LCH_Off_Gas_Homes_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LCH_Off_Gas_Homes_Percentage__c</fullName>
    <formula>(Maximum_grant_funded_costs_on_LCH_homes__c /  No_of_Homes_for_On_Gas_grid_LCH_Offer__c) / 20000</formula>
    <label>Actual Average On-Gas LCH Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>