force-app/main/default/objects/FundingBaseline__c/fields/Maximum_grant_funded_costs_on_LCH_homes__c.field-meta.xml
<CustomField>
    <fullName>Maximum_grant_funded_costs_on_LCH_homes__c</fullName>
    <label>Grant funded costs on LCH homes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>