force-app/main/default/objects/FundingBaseline__c/fields/Mid_Mobilisation_Review_Successful__c.field-meta.xml
<CustomField>
    <fullName>Mid_Mobilisation_Review_Successful__c</fullName>
    <label>Mid-Mobilisation Review Successful (MS)</label>
    <type>Date</type>
</CustomField>