force-app/main/default/objects/FundingBaseline__c/fields/Next_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Reporting_Date__c</fullName>
    <formula>Funding_Award__r.FundingOpportunity.Scheme_Reporting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Reporting Date</label>
    <type>Date</type>
</CustomField>