force-app/main/default/objects/FundingBaseline__c/fields/No_homes_with_installs_complete_KPI_4__c.field-meta.xml
<CustomField>
    <fullName>No_homes_with_installs_complete_KPI_4__c</fullName>
    <description>No. homes with installs complete (KPI 4)</description>
    <inlineHelpText>No. homes with installs complete (KPI 4)</inlineHelpText>
    <label>No. of Homes All Installations Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>