force-app/main/default/objects/FundingBaseline__c/fields/No_Of_Homes_25_26__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Homes_25_26__c</fullName>
    <label>No. Of Homes 25/26</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>