force-app/main/default/objects/FundingBaseline__c/fields/No_of_Homes_Completed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Completed__c</fullName>
    <description>KPI 5 - No. of Homes Completed</description>
    <inlineHelpText>KPI 5 - No. of Homes Completed</inlineHelpText>
    <label>No. of Homes Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>