force-app/main/default/objects/FundingBaseline__c/fields/No_of_homes_ending_at_EPC_E__c.field-meta.xml
<CustomField>
    <fullName>No_of_homes_ending_at_EPC_E__c</fullName>
    <label>No. of homes ending at EPC E</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>