force-app/main/default/objects/FundingBaseline__c/fields/No_of_Homes_for_Off_Gas_grid_LCH_Uplift__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_for_Off_Gas_grid_LCH_Uplift__c</fullName>
    <description>No. of homes accessing the off-gas grid LCH uplift</description>
    <inlineHelpText>No. of homes accessing the off-gas grid LCH uplift</inlineHelpText>
    <label>No. of Homes for Off Gas grid LCH Uplift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>