force-app/main/default/objects/FundingBaseline__c/fields/No_of_homes_starting_at_EPC_B__c.field-meta.xml
<CustomField>
    <fullName>No_of_homes_starting_at_EPC_B__c</fullName>
    <label>No. of homes starting at EPC B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>