force-app/main/default/objects/FundingBaseline__c/fields/No_of_Homes_to_EPC_A_or_B__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_to_EPC_A_or_B__c</fullName>
    <description>No. of Homes to reach EPC A or B</description>
    <inlineHelpText>No. of Homes to reach EPC A or B</inlineHelpText>
    <label>No. of Homes to EPC A or B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>