force-app/main/default/objects/FundingBaseline__c/fields/No_of_Homes_To_EPC_C_24_25__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_To_EPC_C_24_25__c</fullName>
    <label>No. of Homes To EPC C 24/25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>