force-app/main/default/objects/FundingBaseline__c/fields/No_of_Homes_to_EPC_C__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_to_EPC_C__c</fullName>
    <description>Homes to EPC C</description>
    <inlineHelpText>Homes to EPC C</inlineHelpText>
    <label>No. of Homes to EPC C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>