force-app/main/default/objects/FundingBaseline__c/fields/No_of_Homes_Treated__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Treated__c</fullName>
    <description>Homes Treated (KPI)</description>
    <inlineHelpText>Homes Treated (KPI)</inlineHelpText>
    <label>No. of Homes Treated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>