force-app/main/default/objects/FundingBaseline__c/fields/No_of_Homes_Treated_at_least_1_Measure__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Treated_at_least_1_Measure__c</fullName>
    <description>KPI 4 - No. of Homes Treated with at least One Measure</description>
    <inlineHelpText>KPI 4 - No. of Homes Treated with at least One Measure</inlineHelpText>
    <label>No. of Homes Treated at least 1 Measure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>